--- a/project-webdesign/assets/css/main.css
+++ b/project-webdesign/assets/css/main.css
@@ -1,11 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");
 @import url("fontawesome-all.min.css");
 
-/*
-	Big Picture by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -644,7 +640,21 @@ input, select, textarea {
 					padding: 1.5em 1.25em 1.5em 1.25em;
 					background-color: rgba(255, 255, 255, 0.9);
 				}
+		}		
+		.box.style3 {
+			padding: 3.5em 2.5em 3.5em 2.5em;
+		}
 
+		@media screen and (max-width: 736px) {
+
+			.box {
+				padding: 1em;
+			}
+
+				.box.style3 {
+					padding: 1.5em 1.25em 1.5em 1.25em;
+					background-color: rgba(255, 255, 255, 0.9);
+				}
 		}
 
 /* Button */
@@ -1978,7 +1988,7 @@ input, select, textarea {
 				opacity: 0;
 			}
 
-		.main.style2 {
+		.main.style2, .main.style4 {
 			-moz-align-items: center;
 			-webkit-align-items: center;
 			-ms-align-items: center;
@@ -2001,11 +2011,23 @@ input, select, textarea {
 				-ms-transform: translateZ(0);
 				transform: translateZ(0);
 				position: relative;
-				width: 35%;
+				width: 45%;
 				margin: 0;
 			}
-
-			.main.style2.left {
+			.main.style4 > .content {
+				-moz-transition: -moz-transform 1s ease;
+				-webkit-transition: -webkit-transform 1s ease;
+				-ms-transition: -ms-transform 1s ease;
+				transition: transform 1s ease;
+				-moz-transform: translateZ(0);
+				-webkit-transform: translateZ(0);
+				-ms-transform: translateZ(0);
+				transform: translateZ(0);
+				position: relative;
+				width: 50%;
+				margin: 0;
+			}
+			.main.style2.left, .main.style4.left {
 				-moz-justify-content: -moz-flex-start;
 				-webkit-justify-content: -webkit-flex-start;
 				-ms-justify-content: -ms-flex-start;
@@ -2020,6 +2042,12 @@ input, select, textarea {
 			}
 
 			.main.style2.inactive.left > .content {
+				-moz-transform: translateX(-100%);
+				-webkit-transform: translateX(-100%);
+				-ms-transform: translateX(-100%);
+				transform: translateX(-100%);
+			}
+			.main.style4.inactive.left > .content {
 				-moz-transform: translateX(-100%);
 				-webkit-transform: translateX(-100%);
 				-ms-transform: translateX(-100%);
@@ -2083,6 +2111,9 @@ input, select, textarea {
 			.main.style2 .content {
 				width: 40%;
 			}
+			.main.style4 .content {
+				width: 60%;
+			}
 
 		}
 
@@ -2091,6 +2122,9 @@ input, select, textarea {
 			.main.style2 .content {
 				width: 50%;
 			}
+			.main.style4 .content {
+				width: 70%;
+			}
 
 		}
 
@@ -2098,6 +2132,9 @@ input, select, textarea {
 
 			.main.style2 .content {
 				width: 60%;
+			}
+			.main.style4 .content {
+				width: 80%;
 			}
 
 		}
@@ -2141,12 +2178,11 @@ input, select, textarea {
 					-ms-transform: none;
 					transform: none;
 				}
-
-			.main.style3 {
+				/* // gallery */
+			.main.style3 {  
 				text-align: center;
 				padding: 3em 10px 3em 10px;
 			}
-
 		}
 
 		@media screen and (max-width: 480px) {
@@ -2268,6 +2304,15 @@ input, select, textarea {
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
 	}
+
+/* Three */
+
+#three {
+	background: url("images/overlay.png"), url("../../images/Generate a highly realistic image of a completely  (1).jpg");
+	background-size: 256px 256px, cover;
+	background-attachment: fixed, fixed;
+	background-position: top left, center center;
+}	
 
 /* Contact */
 
